tests/integration/snapshots/main__integration__sequence__doubledash_flags_before_dd.snap
---
source: tests/integration/sequence.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: unknown flag: --baz
   ╭─[ <cli>:1:13 ]
   │
 1 │ --foo --bar --baz
   │             ──┬──  
   │               ╰──── unknown flag: --baz
───╯
